--- a/fliXNA_xbox/fliXNA_xbox.csproj
+++ b/fliXNA_xbox/fliXNA_xbox.csproj
@@ -91,6 +91,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Indoor.cs" />
+    <Compile Include="source\AI.cs" />
     <Compile Include="fliXNA\system\FlxAnim.cs" />
     <Compile Include="fliXNA\FlxBasic.cs" />
     <Compile Include="fliXNA\FlxCamera.cs" />
@@ -120,10 +122,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="source\CameraHelper.cs" />
     <Compile Include="source\Driller.cs" />
-    <Compile Include="source\FlxTileblock.cs" />
-    <Compile Include="source\Follower.cs" />
+    <Compile Include="fliXNA\FlxTileblock.cs" />
     <Compile Include="source\Player.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="source\TestHouse.cs" />
     <Compile Include="source\TitleState.cs" />
     <Compile Include="source\ZeldaCam.cs" />
   </ItemGroup>
